--- a/assets/css/geral.css
+++ b/assets/css/geral.css
@@ -21,3 +21,9 @@
     margin-right: 1.5rem;
     color: #fff;
 }
+
+.email_usuario{
+    color: white;
+    font-size: 13pt;
+    margin-right: 10px;
+}
